src/test/ui/issues/issue-32709.stderr
error[E0277]: the trait bound `(): From<{integer}>` is not satisfied
  --> $DIR/issue-32709.rs:4:5
   |
LL |     Err(5)?;
   |     ^^^^^^^ the trait `From<{integer}>` is not implemented for `()`
   |
   = note: required because of the requirements on the impl of `Try<std::result::Result<!, {integer}>>` for `std::result::Result<i32, ()>`
   = note: required by `from_holder`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
